syntax = "proto2";
package ptGoods;

import "gogo.proto";

//option (gogoproto.gostring_all) = true;
option (gogoproto.equal_all) = true;
option (gogoproto.verbose_equal_all) = true;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all) = true;
option (gogoproto.populate_all) = true;
//option (gogoproto.testgen_all) = true;
option (gogoproto.benchgen_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;

// 公共 rpc 错误返回
message RPCErrorResponse {
    required int32 status = 1 [(gogoproto.nullable) = false];
    required string msg = 2 [(gogoproto.nullable) = false];
}

message CreateGoodsRequest {
    //option (gogoproto.unmarshaler) = false;
    required string name = 1 [(gogoproto.nullable) = false];
    required string desc = 2 [(gogoproto.nullable) = false];
    required uint32 type = 3 [(gogoproto.nullable) = false];
    required string img = 4 [(gogoproto.nullable) = false];
    required string conditions = 5 [(gogoproto.nullable) = false];
    required uint32 price = 6 [(gogoproto.nullable) = false];
    required uint32 price_org = 7 [(gogoproto.nullable) = false];
    required string goods_ext = 8 [(gogoproto.nullable) = false];
    required uint32 ExpireTime = 9 [(gogoproto.nullable) = false];
    required int64 CreateTime = 10 [(gogoproto.nullable) = false];
    required int64 CreateBy = 11 [(gogoproto.nullable) = false];
    required GoodsStatus status = 12 [(gogoproto.nullable) = false]; //状态
}


message GoodsInfo {
    required int64 goods_id = 1 [(gogoproto.nullable) = false];
    required string name = 2 [(gogoproto.nullable) = false];
    required string desc = 3 [(gogoproto.nullable) = false];
    required uint32 type = 4 [(gogoproto.nullable) = false];
    required string img = 5 [(gogoproto.nullable) = false];
    required string conditions = 6 [(gogoproto.nullable) = false];
    required uint32 price = 7 [(gogoproto.nullable) = false];
    required uint32 price_org = 8 [(gogoproto.nullable) = false];
    required string goods_ext = 9 [(gogoproto.nullable) = false];
    required uint32 expire_time = 10 [(gogoproto.nullable) = false];
    required GoodsStatus status = 11 [(gogoproto.nullable) = false]; //状态
    required int64 add_time = 12 [(gogoproto.nullable) = false];
    required int64 create_by = 13 [(gogoproto.nullable) = false];


}

enum GoodsStatus {
    option (gogoproto.goproto_enum_prefix) = false;
    UNAVAILABLE = 0; //不可用
    AVAILABLE = 1; //可用
    DELETED = 2; //已删除
}

message GoodsPrice {

    required int64 gp_id = 1 [(gogoproto.nullable) = false];
    required uint32 goods_id = 2 [(gogoproto.nullable) = false];
    required uint32 exchange_price = 3 [(gogoproto.nullable) = false];
    required uint32 exchange_type = 4 [(gogoproto.nullable) = false];
    required uint32 status = 5 [(gogoproto.nullable) = false];
}


message GoodsID {
    required int64 id = 1 [(gogoproto.nullable) = false];
}


message Mid {
    required int64 id = 1 [(gogoproto.nullable) = false];
}

//背包里面的一个物品信息
message BagItemInfo {
    required int64 ug_id = 1 [(gogoproto.nullable) = false] ;
    required int64 goods_id = 2 [(gogoproto.nullable) = false];
    required int64 expire_time = 3 [(gogoproto.nullable) = false];
    required string ext = 4 [(gogoproto.nullable) = false];
    required int64 add_time = 5 [(gogoproto.nullable) = false];
    required string name = 6 [(gogoproto.nullable) = false];
    required uint32 type = 7 [(gogoproto.nullable) = false];
    required string img = 8 [(gogoproto.nullable) = false];

}

//背包中物品的详细信息
message BagItemDetail {
    required int64 ug_id = 1 [(gogoproto.nullable) = false];
    required int64 goods_id = 2 [(gogoproto.nullable) = false];
    required int64 expire_time = 3 [(gogoproto.nullable) = false];
    required string ext = 4 [(gogoproto.nullable) = false];
    required string name = 5 [(gogoproto.nullable) = false];
    required string desc = 6 [(gogoproto.nullable) = false];
    required uint32 type = 7 [(gogoproto.nullable) = false];
    required string img = 8 [(gogoproto.nullable) = false];
    required string conditions = 9 [(gogoproto.nullable) = false];
    required uint32 price = 10 [(gogoproto.nullable) = false];
    required string goods_ext = 11 [(gogoproto.nullable) = false];
    required GoodsStatus status = 13 [(gogoproto.nullable) = false]; //状态
}


enum GoodsType {
    option (gogoproto.goproto_enum_prefix) = false;
    SILVER_CONIN = 0;
    BULLION = 1;
    PROPS = 2;
    PHYSICAL_ITEM = 3;
    VIRTUAL_ITEM = 4;
    OUTLINE_ITEM = 5;
    GIFT = 6;
    PIECES_GOODS = 7;
}

//----- rpc 返回 背包的数据结构 -------
// 背包返回数据
message BagItemsResponse {
    required int32 status = 1 [(gogoproto.nullable) = false]; //错误代码
    required string msg = 2 [(gogoproto.nullable) = false]; //错误信息
    required Bag data = 3 ; //背包返回数据
}

//背包
message Bag {
    repeated BagTab tabs = 1 ; // 物品tabs
    repeated BagItem new_goods = 2; // 最新物品
    repeated BagItem all_goods = 3; // 所有物品
}

// 背包标签
message BagTab {
    required int64 label_id = 1[(gogoproto.nullable) = false];
    required string name = 2 [(gogoproto.nullable) = false];
}

message BagTabs {
    repeated BagTab items = 1;
}

//背包物品
message BagItem {
    required int64 ug_id = 1 [(gogoproto.nullable) = false];
    required int64 goods_id = 2 [(gogoproto.nullable) = false];
    required int32 num = 3 [(gogoproto.nullable) = false];
    required int64 expire_time = 4 [(gogoproto.nullable) = false];
    required string ext = 5 [(gogoproto.nullable) = false];
    required int64 tab_id = 6 [(gogoproto.nullable) = false];
}

//----- rpc 返回 背包的数据结构 end -------

//---- 道具使用- 客户端请求---------
message GoodsUseRequest {
    required int64 mid = 1 [(gogoproto.nullable) = false]; //用户id
    required int64 goodsId = 2 [(gogoproto.nullable) = false]; // 物品id
    required int64 ugId = 3 [(gogoproto.nullable) = false]; // 背包物品序列号
    required int64 targetId = 4 [(gogoproto.nullable) = false]; // 目标用户的ID
    required int32 num = 5 [(gogoproto.nullable) = false];
}

//-----------------------------

//-----------物品合成------------
message SynthesisRequest {
    required int64 mid = 1 [(gogoproto.nullable) = false];
    required int64 goodsId = 2 [(gogoproto.nullable) = false];
    required int64 ugId = 3 [(gogoproto.nullable) = false];
    required int32 num = 4 [(gogoproto.nullable) = false];
    required int64 targetId = 5 [(gogoproto.nullable) = false];
}

//------------------------------

// 实物兑换
message ExchangeRealGoodsRequest {
    required int64 mid = 1 [(gogoproto.nullable) = false];
    required int64 goodsId = 2 [(gogoproto.nullable) = false];
    required int64 ugId = 3 [(gogoproto.nullable) = false];
    required string realName = 4 [(gogoproto.nullable) = false];
    required string addr = 5 [(gogoproto.nullable) = false];
    required string phone = 6 [(gogoproto.nullable) = false];
}

// 兑换历史请求
message ExHistoryRequest {
    required int64 mid = 1 [(gogoproto.nullable) = false];
    required uint32 new = 2 [(gogoproto.nullable) = false]; //0 或 1， 0 历史，1 最新
    required int64 pre_index = 3 [(gogoproto.nullable) = false]; //上一次的索引
    required uint32 page_size = 4 [(gogoproto.nullable) = false];
}

message ExChangeItem {
    required string goodsName = 1 [(gogoproto.nullable) = false];
    required string ext = 2 [(gogoproto.nullable) = false];
    required int64 create_time = 3 [(gogoproto.nullable) = false];
    required string status = 4 [(gogoproto.nullable) = false];
}

// 物品兑换历史纪录列表
message ExHistoryResponse {
    required int64 status = 1 [(gogoproto.nullable) = false];
    required string msg = 2 [(gogoproto.nullable) = false];
    repeated ExChangeItem data = 3;
}

// 物品兑换话费
message ExChangeTelFeeRequest {
    required int64 mid = 1 [(gogoproto.nullable) = false];
    required int64 goods_id = 2 [(gogoproto.nullable) = false];
    required int64 ugId = 3 [(gogoproto.nullable) = false];
    required string phone = 4 [(gogoproto.nullable) = false];
}

//物品使兑换返回
message GoodsUseResponse {
    required int64 status = 1 [(gogoproto.nullable) = false]; //使用结果，0：成功
    required string msg = 2 [(gogoproto.nullable) = false]; //提示信息
    required int32 num = 3 [(gogoproto.nullable) = false]; //道具剩余数量
}
//物品列表
//message goodsid {
//    required int64 id = 1 [(gogoproto.nullable) = false];
//}
message GoodsListRequest {
    repeated int64 goodsId = 1;
}
message GoodsItem {
    required int64 goods_id = 1 [(gogoproto.nullable) = false]; //物品id
    required string name = 2 [(gogoproto.nullable) = false]; //物品名称
    required string desc = 3 [(gogoproto.nullable) = false];//详细
    required uint32 goods_type = 4 [(gogoproto.nullable) = false];//类型
    required int64 label = 5 [(gogoproto.nullable) = false];//分类
    required string img = 6 [(gogoproto.nullable) = false];//图片
    required string conditions = 7 [(gogoproto.nullable) = false];//使用条件
    required string goods_ext = 8 [(gogoproto.nullable) = false];//额外信息
    required int64 app_version = 9 [(gogoproto.nullable) = false];//可用APP版本
    required string pay = 10 [(gogoproto.nullable) = false];//付款方式
    required string add = 11 [(gogoproto.nullable) = false];//额外赠送
}
message GoodsListResponse {
    required int64 status = 1 [(gogoproto.nullable) = false];
    required string msg = 2  [(gogoproto.nullable) = false];
    repeated GoodsItem goods = 3;
}

